02_code1/grade.txt
Grading at Sun Aug  9 06:30:56 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘main’:
temp.c:19:10: error: format ‘%f’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Werror=format=]
   printf("max(0x451215AF, 0x913591A) is %f\n", max(0x451215AF, 0x913591A));  
          ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
